Archive2/d0/59c26400efed6b/output
main.cpp:13:6: error: use of undeclared identifier 'C'
enum C::E : int { x = 2 };
     ^
1 error generated.
